fix whitespace at bottom????

--- a/style/general.scss
+++ b/style/general.scss
@@ -108,10 +108,6 @@ body {
     }
 }
 
-.sr-only {
-    display: unset !important;
-}
-
 @import './cursor';
 @import './links';
 @import './checkbox';
